# esercitazioni-pcs-2026

./: file.txt
eser1-NEW/: CMakeLists.txt  media.cpp  printargs.cpp
eser1-NEW/build_es1/: CMakeCache.txt  Makefile  cmake_install.cmake  eser1-NEW  printargs
esercitazione2/: CMakeLists.txt  algoritmi.cpp  posiz_oggetti.cpp
esercitazione3/: CMakeLists.txt  main_rational.cpp  rational.hpp
esercitazione4/: CMakeLists.txt  grafico.fig  grafico_pcs.m  measure_sorts.cpp  sorts.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione5/: CMakeLists.txt  RelazionePCS - Documenti Google.html  es5_pcs.m  measure_sorts.cpp  sorts.hpp  tempi_test.txt  test_bubblesort.cpp  test_insertionsort.cpp  test_mergesort.cpp  test_quicksort.cpp  test_selectionsort.cpp
esercitazione6/: CMakeLists.txt  test_edge.cpp  test_graph.cpp  unidirected_edge.hpp  unidirected_graph.hpp
